--- a/project/3d_dataloader copy.ipynb
+++ b/project/3d_dataloader copy.ipynb
@@ -120,7 +120,100 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Hyper-parameters (next three lines) #\n",
+    "NUM_EPOCHS = 10\n",
+    "EVAL_EVERY = 1\n",
+    "BATCH_SIZE = 2\n",
+    "\n",
+    "train_dataset = Dataset(data=Files, transform=train_transforms)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "val_dataset = None\n",
+    "val_loader = None\n",
+    "\n",
+    "model = None\n",
+    "\n",
+    "\n",
+    "# More design decisions (model, loss, optimizer) #\n",
+    "loss_fn = torch.nn.CrossEntropyLoss() # Apply \"softmax\" to the output of the network and don't convert to onehot because this is done already by the transforms.\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3) \n",
+    "\n",
+    "inferer = monai.inferers.SliceInferer(roi_size=[-1, -1], spatial_dim=2, sw_batch_size=1)\n",
+    "\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
+    "\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    print(f'Epoch {epoch + 1}')\n",
+    "\n",
+    "    model.train()\n",
+    "    epoch_loss = 0\n",
+    "    step = 0\n",
+    "    for tr_data in train_loader:\n",
+    "        inputs = tr_data['image'].cuda()\n",
+    "        targets = tr_data['label'].cuda()\n",
+    "\n",
+    "        # Forward -> Backward -> Step\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "        loss = loss_fn(outputs, targets)\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        epoch_loss += loss.detach()\n",
+    "        step += 1\n",
+    "        \n",
+    "    # Log and store average epoch loss\n",
+    "    epoch_loss = epoch_loss.item() / step\n",
+    "    train_losses.append(epoch_loss)\n",
+    "    print(f'Mean training loss: {epoch_loss}')\n",
+    "\n",
+    "    epoch_loss = 0\n",
+    "    step = 0\n",
+    "    if epoch % EVAL_EVERY == 0:\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():  # Do not need gradients for this part\n",
+    "            for val_data in val_loader:\n",
+    "                inputs = val_data['image'].cuda()\n",
+    "                targets = val_data['label'].cuda()\n",
+    "\n",
+    "                outputs = model(inputs)\n",
+    "\n",
+    "                loss = loss_fn(outputs, targets)\n",
+    "                epoch_loss += loss.detach()\n",
+    "                step += 1\n",
+    "        \n",
+    "        # Log and store average epoch loss\n",
+    "        epoch_loss = epoch_loss.item() / step\n",
+    "        val_losses.append(epoch_loss)\n",
+    "        print(f'Mean validation loss: {epoch_loss}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code for the task here\n",
+    "# Plot the training loss over time\n",
+    "plt.plot(train_losses, label='Training loss')\n",
+    "plt.title('Training loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot validation dice coefficients over time\n",
+    "plt.plot(val_losses, label=['Class 1', 'Class 2', 'Class 3'])\n",
+    "plt.title('Validation dice coefficients')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Dice Loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
