Worked on training loop

--- a/project/3d_dataloader copy.ipynb
+++ b/project/3d_dataloader copy.ipynb
@@ -199,20 +199,13 @@
    "source": [
     "# Code for the task here\n",
     "# Plot the training loss over time\n",
-    "plt.plot(train_losses, label='Training loss')\n",
+    "plt.plot(train_losses, label='Training')\n",
+    "plt.plot(val_losses, label='Validation')\n",
     "plt.title('Training loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot validation dice coefficients over time\n",
-    "plt.plot(val_losses, label=['Class 1', 'Class 2', 'Class 3'])\n",
-    "plt.title('Validation dice coefficients')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Dice Loss')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
