--- a/project/2D_DataLoader_Training.ipynb
+++ b/project/2D_DataLoader_Training.ipynb
@@ -537,6 +537,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a classification task the accuracy is given by\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{Accuracy} = \\frac{\\text{TP}}{\\text{TP} + \\text{FP}}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "where TP is the number of true positives and FP is the number of false positives.\n",
+    "The precision is given by\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{Precision} = \\frac{\\text{TP}}{\\text{TP} + \\text{FP}}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "The recall is given by\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{Recall} = \\frac{\\text{TP}}{\\text{TP} + \\text{FN}}\n",
+    "\\end{align}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
